# iconic

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md
src/: fontawesome.rs  fontawesome_ext.rs  hypertext.rs  icon.rs  lib.rs
src/fontawesome/: brand.rs  regular.rs  solid.rs
src/fontawesome_ext/: regular.rs
