[package]
name = "iconic"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
text = []
hypertext = ["dep:hypertext"]
fontawesome = ["fontawesome-brand", "fontawesome-regular", "fontawesome-solid"]
fontawesome-brand = []
fontawesome-regular = []
fontawesome-solid = []
fontawesome-ext = ["fontawesome-ext-regular"]
fontawesome-ext-regular = []

[dependencies]
derive_more = { version = "2.1", features = ["from"] }
hypertext = { git = "https://github.com/XX/hypertext", branch = "children-ref", version = "0.12", optional = true }
